# SamerPosterga

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pr-note  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEVOPS_AUDIT_REPORT.md  Dockerfile  Dockerfile.optimized  GEMINI.md  README.md  TEST_COVERAGE_REPORT.md  discord-rag-bot-complete.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.bat
.chroma/: chroma.sqlite3
deploy/: README.md  portainer-stack.yml
deploy/docker/: README.md  docker-compose.yml
deploy/portainer/: README.md  environment-template.env  portainer-stack.yml
docs/: 404.html  README.md  index.html  index.md  local.html  sitemap.xml  vps-portainer.html  vps-portainer.md
docs/assets/stylesheets/: extra.css
docs/deployment/: index.html
docs/development/: AGENTS.md  index.html  index.md  local.html  local.md
docs/implantacao/: index.md  vps-portainer.html
docs/search/: search_index.json
knowledge/: README.md
knowledge/direito_constitucional/: lei_fundamental.txt
scripts/: WINDOWS.md  build-docs.sh  build-multiarch.sh  deploy-docs.sh  serve-docs.sh  setup.ps1  test-setup.ps1
secrets/: DISCORD_TOKEN  OPENAI_API_KEY  OPENROUTER_API_KEY
src/asof_bot/: __init__.py  config.py  main.py
src/asof_bot/bot/: __init__.py  bot.py
src/asof_bot/llm/: client.py
src/asof_bot/rag/: embeddings.py  ingest.py
src/juridic_bot/: __init__.py  config.py  main.py
src/juridic_bot/bot/: bot.py
src/juridic_bot/llm/: __init__.py  client.py
src/juridic_bot/rag/: __init__.py  ingest.py  retriever.py
tests/: __init__.py  test_bot.py  test_config.py  test_llm_client.py  test_rag_retriever.py
